--- a/views/tenants/index.ejs
+++ b/views/tenants/index.ejs
@@ -1,6 +1,105 @@
 <%include ../partials/header.ejs%>
-<h1>Index Page</h1>
-<%tenants.forEach(function(tenant){%>
-	<h3> <%= tenant.name %> </h3>
-	<%});%>
+
+	
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-lg-3">
+			
+			<%var i;%>
+			<%tenants.forEach(function(tenant){%>
+				<%var n = tenant.name;%>
+				<%var c = tenant.column%>
+				<%if(c == 1){%>
+					<%if(n.charAt(0) == i){%>
+							<h2><%=tenant.name%></h2>
+							<h3><<%=tenant.subname%></h3>
+						<%} else {%>
+							<%i = n.charAt(0);%>
+							<h1><%=i%></h1>
+							<hr>
+							<h2><%=tenant.name%> <span><%=tenant.suite%></span></h2>
+							<h3><%=tenant.subname1%></h3>
+							<h3><%=tenant.subname2%></h3>
+							<h3><%=tenant.subname3%></h3>
+							<h3><%=tenant.subname4%></h3>
+							<h3><%=tenant.subname5%></h3>
+							<h3><%=tenant.subname6%></h3>
+							<%}%>
+					<%}%>
+			<%});%>
+		</div>
+		<div class="col-lg-3">
+			
+			<%var i;%>
+			<%tenants.forEach(function(tenant){%>
+				<%var n = tenant.name;%>
+				<%var c = tenant.column%>
+				<%if(c == 2){%>
+					<%if(n.charAt(0) == i){%>
+							<h2><%=tenant.name%></h2>
+							<h3><<%=tenant.subname%></h3>
+						<%} else {%>
+							<%i = n.charAt(0);%>
+							<h1><%=i%></h1>
+							<hr>
+							<h2><%=tenant.name%> <span><%=tenant.suite%></span></h2>
+							<h3><%=tenant.subname1%></h3>
+							<h3><%=tenant.subname2%></h3>
+							<h3><%=tenant.subname3%></h3>
+							<h3><%=tenant.subname4%></h3>
+							<h3><%=tenant.subname5%></h3>
+							<h3><%=tenant.subname6%></h3>
+							<%}%>
+					<%}%>
+			<%});%>
+		</div>
+		<div class="col-lg-3">
+			<%tenants.forEach(function(tenant){%>
+				<%var n = tenant.name;%>
+				<%var c = tenant.column%>
+				<%if(c == 3){%>
+					<%if(n.charAt(0) == i){%>
+							<h2><%=tenant.name%></h2>
+							<h3><<%=tenant.subname%></h3>
+						<%} else {%>
+							<%i = n.charAt(0);%>
+							<h1><%=i%></h1>
+							<hr>
+							<h2><%=tenant.name%> <span><%=tenant.suite%></span></h2>
+							<h3><%=tenant.subname1%></h3>
+							<h3><%=tenant.subname2%></h3>
+							<h3><%=tenant.subname3%></h3>
+							<h3><%=tenant.subname4%></h3>
+							<h3><%=tenant.subname5%></h3>
+							<h3><%=tenant.subname6%></h3>
+							<%}%>
+					<%}%>
+			<%});%>
+		</div>
+		
+
+		<div class="col-lg-3 dirMenu">
+			<div class="row">
+				<img src="/Assets/VOPNoWords.png" class="logo">
+				<h1 class="VOP">Valley Office Park</h1>
+				<h1 class="CP">Colony Park</h1>
+			</div>
+			<hr>
+			<div class="row">
+				<div id="openweathermap-widget-22" class="menuItem"></div>
+				<script>window.myWidgetParam ? window.myWidgetParam : window.myWidgetParam = [];  window.myWidgetParam.push({id: 22,cityid: '4881346',appid: '8deb9186ad62ba1d2113ab0ba186c3a1',units: 'imperial',containerid: 'openweathermap-widget-22',  });  (function() {var script = document.createElement('script');script.async = true;script.charset = "utf-8";script.src = "//openweathermap.org/themes/openweathermap/assets/vendor/owm/js/weather-widget-generator.js";var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(script, s);  })();
+				</script>
+			</div>
+			<hr>
+			<!-- <div class="row">
+				<h1>News</h1>
+			</div> -->
+			<div class="row">
+				<iframe src="http://free.timeanddate.com/clock/i68fnq8j/n76/fn10/fs26/fcfff/tct/pct/ftb/tt0/tm1/th2/ts1" frameborder="0" width="446" height="30" allowTransparency="true"></iframe>
+
+			</div>
+		</div>
+	</div>
+</div>
+
 <%include ../partials/footer.ejs%>
