--- a/views/tenants/index.ejs
+++ b/views/tenants/index.ejs
@@ -12,12 +12,19 @@
 				<%if(c == 1){%>
 					<%if(n.charAt(0) == i){%>
 							<h2><%=tenant.name%></h2>
-							<h3><<%=tenant.subname%></h3>
+							<h3><%=tenant.subname1%></h3>
+							<h3><%=tenant.subname2%></h3>
+							<h3><%=tenant.subname3%></h3>
+							<h3><%=tenant.subname4%></h3>
+							<h3><%=tenant.subname5%></h3>
+							<h3><%=tenant.subname6%></h3>
 						<%} else {%>
 							<%i = n.charAt(0);%>
 							<h1><%=i%></h1>
 							<hr>
-							<h2><%=tenant.name%> <span><%=tenant.suite%></span></h2>
+							<h2><%=tenant.name%>
+							 	<span><%=tenant.suite%></span>
+							</h2>
 							<h3><%=tenant.subname1%></h3>
 							<h3><%=tenant.subname2%></h3>
 							<h3><%=tenant.subname3%></h3>
@@ -37,12 +44,19 @@
 				<%if(c == 2){%>
 					<%if(n.charAt(0) == i){%>
 							<h2><%=tenant.name%></h2>
-							<h3><<%=tenant.subname%></h3>
+							<h3><%=tenant.subname1%></h3>
+							<h3><%=tenant.subname2%></h3>
+							<h3><%=tenant.subname3%></h3>
+							<h3><%=tenant.subname4%></h3>
+							<h3><%=tenant.subname5%></h3>
+							<h3><%=tenant.subname6%></h3>
 						<%} else {%>
 							<%i = n.charAt(0);%>
 							<h1><%=i%></h1>
 							<hr>
-							<h2><%=tenant.name%> <span><%=tenant.suite%></span></h2>
+							<h2><%=tenant.name%>
+								<span><%=tenant.suite%></span>
+							</h2>
 							<h3><%=tenant.subname1%></h3>
 							<h3><%=tenant.subname2%></h3>
 							<h3><%=tenant.subname3%></h3>
@@ -60,12 +74,19 @@
 				<%if(c == 3){%>
 					<%if(n.charAt(0) == i){%>
 							<h2><%=tenant.name%></h2>
-							<h3><<%=tenant.subname%></h3>
+							<h3><%=tenant.subname1%></h3>
+							<h3><%=tenant.subname2%></h3>
+							<h3><%=tenant.subname3%></h3>
+							<h3><%=tenant.subname4%></h3>
+							<h3><%=tenant.subname5%></h3>
+							<h3><%=tenant.subname6%></h3>
 						<%} else {%>
 							<%i = n.charAt(0);%>
 							<h1><%=i%></h1>
 							<hr>
-							<h2><%=tenant.name%> <span><%=tenant.suite%></span></h2>
+							<h2><%=tenant.name%>
+								<span><%=tenant.suite%></span>
+							</h2>
 							<h3><%=tenant.subname1%></h3>
 							<h3><%=tenant.subname2%></h3>
 							<h3><%=tenant.subname3%></h3>
