--- a/views/tenants/show.ejs
+++ b/views/tenants/show.ejs
@@ -13,7 +13,31 @@
 			<h3><%=tenant.subname5%></h3>
 			<h3><%=tenant.subname6%></h3>
 			<a href="/tenants/<%=tenant._id%>/edit" class="btn btn-warning">Edit</a>
-			<form class="btn btn-danger">Delete</form>
+			<!-- Button trigger modal -->
+			<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal">
+			  Delete
+			</button>
+
+		<!-- Modal -->
+		<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+		  <div class="modal-dialog" role="document">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <h5 class="modal-title" id="deleteModalLabel">Delete Tenant</h5>
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+		          <span aria-hidden="true">&times;</span>
+		        </button>
+		      </div>
+		      <div class="modal-body">
+		        Are you sure you want to delete <%=tenant.name%>?
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+		       <form action="/tenants/<%=tenant._id%>?_method=DELETE" method="POST"><input type="submit" class="btn btn-danger" value="Delete"></form>
+		      </div>
+		    </div>
+		  </div>
+		</div>			
 	</div>
 </div>
 <%include ../partials/footer%>
