--- a/views/tenants/edit.ejs
+++ b/views/tenants/edit.ejs
@@ -24,6 +24,10 @@
                     <input class="form-control" type="text" name="tenant[subname4]" value="<%=tenant.subname4%>">
                     <input class="form-control" type="text" name="tenant[subname5]" value="<%=tenant.subname5%>">
                     <input class="form-control" type="text" name="tenant[subname6]" value="<%=tenant.subname6%>">
+                    <input class="form-control" type="text" name="tenant[subname7]" value="<%=tenant.subname7%>">
+                    <input class="form-control" type="text" name="tenant[subname8]" value="<%=tenant.subname8%>">
+                    <input class="form-control" type="text" name="tenant[subname9]" value="<%=tenant.subname9%>">
+                    <input class="form-control" type="text" name="tenant[subname10]" value="<%=tenant.subname10%>">
                 </div> 
                 <button type="Submit" class="btn btn-primary">Submit</button>  
                 <div class="form-group">
