--- a/views/tenants/index.ejs
+++ b/views/tenants/index.ejs
@@ -11,26 +11,36 @@
 				<%var c = tenant.column%>
 				<%if(c == 1){%>
 					<%if(n.charAt(0) == i){%>
-							<h2><%=tenant.name%></h2>
-							<h3><%=tenant.subname1%></h3>
-							<h3><%=tenant.subname2%></h3>
-							<h3><%=tenant.subname3%></h3>
-							<h3><%=tenant.subname4%></h3>
-							<h3><%=tenant.subname5%></h3>
-							<h3><%=tenant.subname6%></h3>
+							<h2 class="tenant"><%=tenant.name%>
+								<span class="suite"><%=tenant.suite%></span>
+							</h2>
+							<h3 class="subname"><%=tenant.subname1%></h3>
+							<h3 class="subname"><%=tenant.subname2%></h3>
+							<h3 class="subname"><%=tenant.subname3%></h3>
+							<h3 class="subname"><%=tenant.subname4%></h3>
+							<h3 class="subname"><%=tenant.subname5%></h3>
+							<h3 class="subname"><%=tenant.subname6%></h3>
+							<h3 class="subname"><%=tenant.subname7%></h3>
+							<h3 class="subname"><%=tenant.subname8%></h3>
+							<h3 class="subname"><%=tenant.subname9%></h3>
+							<h3 class="subname"><%=tenant.subname10%></h3>
 						<%} else {%>
 							<%i = n.charAt(0);%>
 							<h1><%=i%></h1>
 							<hr>
-							<h2><%=tenant.name%>
-							 	<span><%=tenant.suite%></span>
+							<h2 class="tenant"><%=tenant.name%>
+							 	<span class="suite"><%=tenant.suite%></span>
 							</h2>
-							<h3><%=tenant.subname1%></h3>
-							<h3><%=tenant.subname2%></h3>
-							<h3><%=tenant.subname3%></h3>
-							<h3><%=tenant.subname4%></h3>
-							<h3><%=tenant.subname5%></h3>
-							<h3><%=tenant.subname6%></h3>
+							<h3 class="subname"><%=tenant.subname1%></h3>
+							<h3 class="subname"><%=tenant.subname2%></h3>
+							<h3 class="subname"><%=tenant.subname3%></h3>
+							<h3 class="subname"><%=tenant.subname4%></h3>
+							<h3 class="subname"><%=tenant.subname5%></h3>
+							<h3 class="subname"><%=tenant.subname6%></h3>
+							<h3 class="subname"><%=tenant.subname7%></h3>
+							<h3 class="subname"><%=tenant.subname8%></h3>
+							<h3 class="subname"><%=tenant.subname9%></h3>
+							<h3 class="subname"><%=tenant.subname10%></h3>
 							<%}%>
 					<%}%>
 			<%});%>
@@ -43,26 +53,36 @@
 				<%var c = tenant.column%>
 				<%if(c == 2){%>
 					<%if(n.charAt(0) == i){%>
-							<h2><%=tenant.name%></h2>
-							<h3><%=tenant.subname1%></h3>
-							<h3><%=tenant.subname2%></h3>
-							<h3><%=tenant.subname3%></h3>
-							<h3><%=tenant.subname4%></h3>
-							<h3><%=tenant.subname5%></h3>
-							<h3><%=tenant.subname6%></h3>
+							<h2 class="tenant"><%=tenant.name%>
+								<span class="suite"><%=tenant.suite%></span>
+							</h2>
+							<h3 class="subname"><%=tenant.subname1%></h3>
+							<h3 class="subname"><%=tenant.subname2%></h3>
+							<h3 class="subname"><%=tenant.subname3%></h3>
+							<h3 class="subname"><%=tenant.subname4%></h3>
+							<h3 class="subname"><%=tenant.subname5%></h3>
+							<h3 class="subname"><%=tenant.subname6%></h3>
+							<h3 class="subname"><%=tenant.subname7%></h3>
+							<h3 class="subname"><%=tenant.subname8%></h3>
+							<h3 class="subname"><%=tenant.subname9%></h3>
+							<h3 class="subname"><%=tenant.subname10%></h3>
 						<%} else {%>
 							<%i = n.charAt(0);%>
 							<h1><%=i%></h1>
 							<hr>
-							<h2><%=tenant.name%>
-								<span><%=tenant.suite%></span>
+							<h2 class="tenant"><%=tenant.name%>
+								<span class="suite"><%=tenant.suite%></span>
 							</h2>
-							<h3><%=tenant.subname1%></h3>
-							<h3><%=tenant.subname2%></h3>
-							<h3><%=tenant.subname3%></h3>
-							<h3><%=tenant.subname4%></h3>
-							<h3><%=tenant.subname5%></h3>
-							<h3><%=tenant.subname6%></h3>
+							<h3 class="subname"><%=tenant.subname1%></h3>
+							<h3 class="subname"><%=tenant.subname2%></h3>
+							<h3 class="subname"><%=tenant.subname3%></h3>
+							<h3 class="subname"><%=tenant.subname4%></h3>
+							<h3 class="subname"><%=tenant.subname5%></h3>
+							<h3 class="subname"><%=tenant.subname6%></h3>
+							<h3 class="subname"><%=tenant.subname7%></h3>
+							<h3 class="subname"><%=tenant.subname8%></h3>
+							<h3 class="subname"><%=tenant.subname9%></h3>
+							<h3 class="subname"><%=tenant.subname10%></h3>
 							<%}%>
 					<%}%>
 			<%});%>
@@ -73,26 +93,37 @@
 				<%var c = tenant.column%>
 				<%if(c == 3){%>
 					<%if(n.charAt(0) == i){%>
-							<h2><%=tenant.name%></h2>
-							<h3><%=tenant.subname1%></h3>
-							<h3><%=tenant.subname2%></h3>
-							<h3><%=tenant.subname3%></h3>
-							<h3><%=tenant.subname4%></h3>
-							<h3><%=tenant.subname5%></h3>
-							<h3><%=tenant.subname6%></h3>
+							<h2 class="tenant"><%=tenant.name%>
+								<span class="suite"><%=tenant.suite%></span>
+							</h2>
+							<h3 class="subname"><%=tenant.subname1%></h3>
+							<h3 class="subname"><%=tenant.subname2%></h3>
+							<h3 class="subname"><%=tenant.subname3%></h3>
+							<h3 class="subname"><%=tenant.subname4%></h3>
+							<h3 class="subname"><%=tenant.subname5%></h3>
+							<h3 class="subname"><%=tenant.subname6%></h3>
+							<h3 class="subname"><%=tenant.subname7%></h3>
+							<h3 class="subname"><%=tenant.subname8%></h3>
+							<h3 class="subname"><%=tenant.subname9%></h3>
+							<h3 class="subname"><%=tenant.subname10%></h3>
 						<%} else {%>
 							<%i = n.charAt(0);%>
 							<h1><%=i%></h1>
 							<hr>
-							<h2><%=tenant.name%>
-								<span><%=tenant.suite%></span>
+							<h2 class="tenant"><%=tenant.name%>
+								<span class="suite"><%=tenant.suite%></span>
 							</h2>
-							<h3><%=tenant.subname1%></h3>
-							<h3><%=tenant.subname2%></h3>
-							<h3><%=tenant.subname3%></h3>
-							<h3><%=tenant.subname4%></h3>
-							<h3><%=tenant.subname5%></h3>
-							<h3><%=tenant.subname6%></h3>
+							<h3 class="subname"><%=tenant.subname1%></h3>
+							<h3 class="subname"><%=tenant.subname2%></h3>
+							<h3 class="subname"><%=tenant.subname3%></h3>
+							<h3 class="subname"><%=tenant.subname4%></h3>
+							<h3 class="subname"><%=tenant.subname5%></h3>
+							<h3 class="subname"><%=tenant.subname6%></h3>
+							<h3 class="subname"><%=tenant.subname7%></h3>
+							<h3 class="subname"><%=tenant.subname8%></h3>
+							<h3 class="subname"><%=tenant.subname9%></h3>
+							<h3 class="subname"><%=tenant.subname10%></h3>
+
 							<%}%>
 					<%}%>
 			<%});%>
@@ -100,7 +131,7 @@
 		
 
 		<div class="col-lg-3 dirMenu">
-			<div class="row">
+			<div class="row" style="max-height:200px;">
 				<img src="/Assets/VOPNoWords.png" class="logo">
 				<h1 class="VOP">Valley Office Park</h1>
 				<h1 class="CP">Colony Park</h1>
