--- a/views/tenants/new.ejs
+++ b/views/tenants/new.ejs
@@ -24,6 +24,10 @@
                     <input class="form-control" type="text" name="subname4" placeholder="Individual user to be listed. Input how you'd like it displayed.">
                     <input class="form-control" type="text" name="subname5" placeholder="Individual user to be listed. Input how you'd like it displayed.">
                     <input class="form-control" type="text" name="subname6" placeholder="Individual user to be listed. Input how you'd like it displayed.">
+                    <input class="form-control" type="text" name="subname7" placeholder="Individual user to be listed. Input how you'd like it displayed.">
+                    <input class="form-control" type="text" name="subname8" placeholder="Individual user to be listed. Input how you'd like it displayed.">
+                    <input class="form-control" type="text" name="subname9" placeholder="Individual user to be listed. Input how you'd like it displayed.">
+                    <input class="form-control" type="text" name="subname10" placeholder="Individual user to be listed. Input how you'd like it displayed.">
                 </div> 
                 <button type="Submit" class="btn btn-primary">Submit</button>          
             </form>
