--- a/views/tenants/show.ejs
+++ b/views/tenants/show.ejs
@@ -12,6 +12,10 @@
 			<h3><%=tenant.subname4%></h3>
 			<h3><%=tenant.subname5%></h3>
 			<h3><%=tenant.subname6%></h3>
+			<h3><%=tenant.subname7%></h3>
+			<h3><%=tenant.subname8%></h3>
+			<h3><%=tenant.subname9%></h3>
+			<h3><%=tenant.subname10%></h3>
 			<a href="/tenants/<%=tenant._id%>/edit" class="btn btn-warning">Edit</a>
 			<!-- Button trigger modal -->
 			<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal">
