--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,3 +6,20 @@
 	<link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
 </head>
 <body>
+	<%if(page!='display'){%>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		  <a class="navbar-brand" href="/tenants">Valley Office Park Directory Controls</a>
+		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+		    <ul class="navbar-nav mr-auto">
+		      <li class="nav-item active">
+		        <a class="nav-link" href="/tenants">Home <span class="sr-only">(current)</span></a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="/tenants/new">Add a Tenant</a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="/">Back to Display</a>
+		      </li>
+		  </div>
+		</nav>
+	<%};%>
