--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,32 @@
 	<title>Tenant Directory</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
+	<link rel="stylesheet" type="text/css" href="/stylesheets/admin.css">
+	<link rel="stylesheet" type="text/css" href="/stylesheets/weather-icons.css">
+<!-- 	<script type="text/javascript" src="https://rss2json.com/gfapi.js"></script>
+
+	   <script type="text/javascript">
+
+	   google.load("feeds", "1");
+
+	   function initialize() {
+	     var feed = new google.feeds.Feed("http://feeds.bbci.co.uk/news/rss.xml");
+	     feed.load(function(result) {
+	       if (!result.error) {
+	         var container = document.getElementById("feed");
+	         for (var i = 0; i < 5; i++) {
+	           var entry = result.feed.entries[i];
+	           var div = document.createElement("p");
+	           div.appendChild(document.createTextNode(entry.title));
+	           container.appendChild(div);
+	         }
+	       }
+	     });
+	   }
+	   google.setOnLoadCallback(initialize);
+
+	   </script>
+ -->
 </head>
 <body>
 	<%if(page!='display'){%>
