--- a/views/tenants/adminindex.ejs
+++ b/views/tenants/adminindex.ejs
@@ -8,37 +8,17 @@
 				<%var c = tenant.column%>
 				<%if(c == 1){%>
 					<%if(n.charAt(0) == i){%>
-							<h2><%=tenant.name%>
-								<span><%=tenant.suite%></span>  <a href="/tenants/<%=tenant._id%>"><button class="btn btn-primary">Info</button></a>
+							<h2 class="atenantname"><%=tenant.name%>
+								<span><%=tenant.suite%></span>  <a href="/tenants/<%=tenant._id%>"><button class="btn btn-primary float-right">Info</button></a>
 							</h2>
-							<h3><%=tenant.subname1%></h3>
-							<h3><%=tenant.subname2%></h3>
-							<h3><%=tenant.subname3%></h3>
-							<h3><%=tenant.subname4%></h3>
-							<h3><%=tenant.subname5%></h3>
-							<h3><%=tenant.subname6%></h3>
-							<h3><%=tenant.subname7%></h3>
-							<h3><%=tenant.subname8%></h3>
-							<h3><%=tenant.subname9%></h3>
-							<h3><%=tenant.subname10%></h3>
 							<hr>
 						<%} else {%>
 							<%i = n.charAt(0);%>
 							<h1><%=i%></h1>
 							<hr>
-							<h2><%=tenant.name%>
-								<span><%=tenant.suite%></span>  <a href="/tenants/<%=tenant._id%>"><button class="btn btn-primary">Info</button></a>
+							<h2 class="atenantname"><%=tenant.name%>
+								<span><%=tenant.suite%></span>  <a href="/tenants/<%=tenant._id%>"><button class="btn btn-primary float-right">Info</button></a>
 							</h2>
-							<h3><%=tenant.subname1%></h3>
-							<h3><%=tenant.subname2%></h3>
-							<h3><%=tenant.subname3%></h3>
-							<h3><%=tenant.subname4%></h3>
-							<h3><%=tenant.subname5%></h3>
-							<h3><%=tenant.subname6%></h3>
-							<h3><%=tenant.subname7%></h3>
-							<h3><%=tenant.subname8%></h3>
-							<h3><%=tenant.subname9%></h3>
-							<h3><%=tenant.subname10%></h3>
 							<hr>
 							<%}%>
 					<%}%>
@@ -52,37 +32,19 @@
 				<%var c = tenant.column%>
 				<%if(c == 2){%>
 					<%if(n.charAt(0) == i){%>
-							<h2><%=tenant.name%>
-								<span><%=tenant.suite%></span>  <a href="/tenants/<%=tenant._id%>"><button class="btn btn-primary">Info</button></a>
+							<h2 class="atenantname"><%=tenant.name%>
+								<span><%=tenant.suite%></span>  <a href="/tenants/<%=tenant._id%>"><button class="btn btn-primary float-right">Info</button></a>
 							</h2>
-							<h3><%=tenant.subname1%></h3>
-							<h3><%=tenant.subname2%></h3>
-							<h3><%=tenant.subname3%></h3>
-							<h3><%=tenant.subname4%></h3>
-							<h3><%=tenant.subname5%></h3>
-							<h3><%=tenant.subname6%></h3>
-							<h3><%=tenant.subname7%></h3>
-							<h3><%=tenant.subname8%></h3>
-							<h3><%=tenant.subname9%></h3>
-							<h3><%=tenant.subname10%></h3>
+
 							<hr>
 						<%} else {%>
 							<%i = n.charAt(0);%>
 							<h1><%=i%></h1>
 							<hr>
-							<h2><%=tenant.name%>
-								<span><%=tenant.suite%></span>  <a href="/tenants/<%=tenant._id%>"><button class="btn btn-primary">Info</button></a>
+							<h2 class="atenantname"><%=tenant.name%>
+								<span><%=tenant.suite%></span>  <a href="/tenants/<%=tenant._id%>"><button class="btn btn-primary float-right">Info</button></a>
 							</h2>
-							<h3><%=tenant.subname1%></h3>
-							<h3><%=tenant.subname2%></h3>
-							<h3><%=tenant.subname3%></h3>
-							<h3><%=tenant.subname4%></h3>
-							<h3><%=tenant.subname5%></h3>
-							<h3><%=tenant.subname6%></h3>
-							<h3><%=tenant.subname7%></h3>
-							<h3><%=tenant.subname8%></h3>
-							<h3><%=tenant.subname9%></h3>
-							<h3><%=tenant.subname10%></h3>
+
 							<hr>
 							<%}%>
 					<%}%>
@@ -94,40 +56,22 @@
 				<%var c = tenant.column%>
 				<%if(c == 3){%>
 					<%if(n.charAt(0) == i){%>
-							<h2><%=tenant.name%>
-								<span><%=tenant.suite%></span>  <a href="/tenants/<%=tenant._id%>"><button class="btn btn-primary">Info</button></a>
+							<h2 class="atenantname"><%=tenant.name%>
+								<span><%=tenant.suite%></span>  <a href="/tenants/<%=tenant._id%>"><button class="btn btn-primary float-right">Info</button></a>
 							</h2>
-							<h3><%=tenant.subname1%></h3>
-							<h3><%=tenant.subname2%></h3>
-							<h3><%=tenant.subname3%></h3>
-							<h3><%=tenant.subname4%></h3>
-							<h3><%=tenant.subname5%></h3>
-							<h3><%=tenant.subname6%></h3>
-							<h3><%=tenant.subname7%></h3>
-							<h3><%=tenant.subname8%></h3>
-							<h3><%=tenant.subname9%></h3>
-							<h3><%=tenant.subname10%></h3>
+	
 							<hr>
 						<%} else {%>
 							<%i = n.charAt(0);%>
 							<h1><%=i%></h1>
 							<hr>
-							<h2><%=tenant.name%>
-								<span><%=tenant.suite%></span>  <a href="/tenants/<%=tenant._id%>"><button class="btn btn-primary">Info</button></a>
+							<h2 class="atenantname"><%=tenant.name%>
+								<span><%=tenant.suite%></span>  <a href="/tenants/<%=tenant._id%>"><button class="btn btn-primary float-right">Info</button></a>
 							</h2>
-							<h3><%=tenant.subname1%></h3>
-							<h3><%=tenant.subname2%></h3>
-							<h3><%=tenant.subname3%></h3>
-							<h3><%=tenant.subname4%></h3>
-							<h3><%=tenant.subname5%></h3>
-							<h3><%=tenant.subname6%></h3>
-							<h3><%=tenant.subname7%></h3>
-							<h3><%=tenant.subname8%></h3>
-							<h3><%=tenant.subname9%></h3>
-							<h3><%=tenant.subname10%></h3>
 							<hr>
 							<%}%>
 					<%}%>
 			<%});%>
 		</div>
+		<i class="wi wi-night-sleet"></i>
 <%include ../partials/footer.ejs%>
