--- a/views/tenants/new.ejs
+++ b/views/tenants/new.ejs
@@ -18,19 +18,22 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="text" name="subname1" placeholder="Individual user to be listed. Input how you'd like it displayed.">
-                    <input class="form-control" type="text" name="subname2" placeholder="Individual user to be listed. Input how you'd like it displayed.">
-                    <input class="form-control" type="text" name="subname3" placeholder="Individual user to be listed. Input how you'd like it displayed.">
-                    <input class="form-control" type="text" name="subname4" placeholder="Individual user to be listed. Input how you'd like it displayed.">
-                    <input class="form-control" type="text" name="subname5" placeholder="Individual user to be listed. Input how you'd like it displayed.">
-                    <input class="form-control" type="text" name="subname6" placeholder="Individual user to be listed. Input how you'd like it displayed.">
-                    <input class="form-control" type="text" name="subname7" placeholder="Individual user to be listed. Input how you'd like it displayed.">
-                    <input class="form-control" type="text" name="subname8" placeholder="Individual user to be listed. Input how you'd like it displayed.">
-                    <input class="form-control" type="text" name="subname9" placeholder="Individual user to be listed. Input how you'd like it displayed.">
-                    <input class="form-control" type="text" name="subname10" placeholder="Individual user to be listed. Input how you'd like it displayed.">
+                    <input class="form-control newsub" type="text" name="subname1" placeholder="Individual user to be listed. Input how you'd like it displayed.">
+                    <input class="form-control newsub" type="text" name="subname2" placeholder="Individual user to be listed. Input how you'd like it displayed.">
+                    <input class="form-control newsub" type="text" name="subname3" placeholder="Individual user to be listed. Input how you'd like it displayed.">
+                    <input class="form-control newsub" type="text" name="subname4" placeholder="Individual user to be listed. Input how you'd like it displayed.">
+                    <input class="form-control newsub" type="text" name="subname5" placeholder="Individual user to be listed. Input how you'd like it displayed.">
+                    <input class="form-control newsub" type="text" name="subname6" placeholder="Individual user to be listed. Input how you'd like it displayed.">
+                    <input class="form-control newsub" type="text" name="subname7" placeholder="Individual user to be listed. Input how you'd like it displayed.">
+                    <input class="form-control newsub" type="text" name="subname8" placeholder="Individual user to be listed. Input how you'd like it displayed.">
+                    <input class="form-control newsub" type="text" name="subname9" placeholder="Individual user to be listed. Input how you'd like it displayed.">
+                    <input class="form-control newsub" type="text" name="subname10" placeholder="Individual user to be listed. Input how you'd like it displayed.">
                 </div> 
-                <button type="Submit" class="btn btn-primary">Submit</button>          
+                <button type="Submit" class="btn btn-primary">Submit</button> 
+                <button type="Reset" class="btn btn-warning">Reset</button>
             </form>
+            <br>
+            <a href="/tenants">Back</a>
         </div>
     </div>
 <%include ../partials/footer%>
