--- a/views/tenants/index.ejs
+++ b/views/tenants/index.ejs
@@ -1,9 +1,8 @@
 <%include ../partials/header.ejs%>
-
-	
+<h1 id="title">Colony Park Tenants</h1>
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-lg-3">
+		<div class="col-lg-3 gutter">
 			
 			<%var i;%>
 			<%tenants.forEach(function(tenant){%>
@@ -26,7 +25,7 @@
 							<h3 class="subname"><%=tenant.subname10%></h3>
 						<%} else {%>
 							<%i = n.charAt(0);%>
-							<h1><%=i%></h1>
+							<h1 class="letter"><%=i%></h1>
 							<hr>
 							<h2 class="tenant"><%=tenant.name%>
 							 	<span class="suite"><%=tenant.suite%></span>
@@ -45,8 +44,7 @@
 					<%}%>
 			<%});%>
 		</div>
-		<div class="col-lg-3">
-			
+		<div class="col-lg-3 gutter">
 			<%var i;%>
 			<%tenants.forEach(function(tenant){%>
 				<%var n = tenant.name;%>
@@ -68,7 +66,7 @@
 							<h3 class="subname"><%=tenant.subname10%></h3>
 						<%} else {%>
 							<%i = n.charAt(0);%>
-							<h1><%=i%></h1>
+							<h1 class="letter"><%=i%></h1>
 							<hr>
 							<h2 class="tenant"><%=tenant.name%>
 								<span class="suite"><%=tenant.suite%></span>
@@ -87,7 +85,7 @@
 					<%}%>
 			<%});%>
 		</div>
-		<div class="col-lg-3">
+		<div class="col-lg-3 gutter">
 			<%tenants.forEach(function(tenant){%>
 				<%var n = tenant.name;%>
 				<%var c = tenant.column%>
@@ -108,7 +106,7 @@
 							<h3 class="subname"><%=tenant.subname10%></h3>
 						<%} else {%>
 							<%i = n.charAt(0);%>
-							<h1><%=i%></h1>
+							<h1 class="letter"><%=i%></h1>
 							<hr>
 							<h2 class="tenant"><%=tenant.name%>
 								<span class="suite"><%=tenant.suite%></span>
@@ -131,24 +129,47 @@
 		
 
 		<div class="col-lg-3 dirMenu">
-			<div class="row" style="max-height:200px;">
+			<div class="row" style="max-height:300px;">
 				<img src="/Assets/VOPNoWords.png" class="logo">
-				<h1 class="VOP">Valley Office Park</h1>
-				<h1 class="CP">Colony Park</h1>
 			</div>
-			<hr>
-			<div class="row">
-				<div id="openweathermap-widget-22" class="menuItem"></div>
-				<script>window.myWidgetParam ? window.myWidgetParam : window.myWidgetParam = [];  window.myWidgetParam.push({id: 22,cityid: '4881346',appid: '8deb9186ad62ba1d2113ab0ba186c3a1',units: 'imperial',containerid: 'openweathermap-widget-22',  });  (function() {var script = document.createElement('script');script.async = true;script.charset = "utf-8";script.src = "//openweathermap.org/themes/openweathermap/assets/vendor/owm/js/weather-widget-generator.js";var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(script, s);  })();
-				</script>
+			<hr class="menuHR">
+			<div class="row menuRow">
+				<h1 class="menuTitle">Valley Office Park</h1>
+				<h1 class="menuTitle">Directory</h1>
 			</div>
-			<hr>
+			<!-- Replace this with applet built to display just a logo of the weather and the temperature -->
+			<div class="row menuRow">
+				<% var wid = weather.weather[0].id%>
+				<% var temp = weather.main.temp - weather.main.temp%1%>
+				<%console.log(temp);%>
+				<% if(wid == 800){ %>
+				<i class="wi wi-day-sunny"><p class="temp"><%=temp%>°</p></i>
+				<%} else if(wid >= 801 && wid <= 804){%>
+				<i class="wi wi-cloud"><p class="temp"><%=temp%>°</p></i>
+				<%} else if(wid >= 300 && wid <= 321){%>
+				<i class="wi wi-showers"><p class="temp"><%=temp%>°</p></i>
+				<%} else if(wid >= 500 && wid <= 531){%>
+				<i class="wi wi-rain"><p class="temp"><%=temp%>°</p></i>
+				<%} else if(wid >= 600 && wid <= 622){%>
+				<i class="wi wi-showers"><p class="temp"><%=temp%>°</p></i>
+				<%} else if(wid >= 200 && wid <= 232){%>
+				<i class="wi wi-thunderstorm"><p class="temp"><%=temp%>°</p></i>
+				<%} else if(wid >= 701 && wid <= 781){%>
+				<i class="wi wi-dust"><p class="temp"><%=temp%>°</p></i>
+				<%}%>
+
+
+				<!-- API call for weather and temperature -->
+			</div>
+			<!-- <div class="row menuRow">
+				<div id="feed"></div>
+			</div> -->
+			<hr class="menuHR">
 			<!-- <div class="row">
 				<h1>News</h1>
 			</div> -->
-			<div class="row">
-				<iframe src="http://free.timeanddate.com/clock/i68fnq8j/n76/fn10/fs26/fcfff/tct/pct/ftb/tt0/tm1/th2/ts1" frameborder="0" width="446" height="30" allowTransparency="true"></iframe>
-
+			<div class="row menuRow">
+				<iframe class="time" src="http://free.timeanddate.com/clock/i68r2mbn/n76/fs32/fcfff/tct/pct/ftb/tt0/tw1/tm1/th2/ts1/tb4" frameborder="0" width="283" height="72" allowTransparency="true"></iframe>
 			</div>
 		</div>
 	</div>
