--- a/views/tenants/index.ejs
+++ b/views/tenants/index.ejs
@@ -1,5 +1,5 @@
 <%include ../partials/header.ejs%>
-<h1 id="title">Colony Park Tenants</h1>
+<h1 id="title">Colony Park Directory</h1>
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-lg-3 gutter">
@@ -10,7 +10,8 @@
 				<%if(c == 1){%>
 					<%if(n.charAt(0) == i){%>
 							<h2 class="tenant"><%=tenant.name%>
-								<span class="suite"><%=tenant.suite%></span>
+								<span class="suite"><%=tenant.suite%>
+								</span>
 							</h2>
 							<h3 class="subname"><%=tenant.subname1%></h3>
 							<h3 class="subname"><%=tenant.subname2%></h3>
@@ -27,7 +28,8 @@
 							<h1 class="letter"><%=i%></h1>
 							<hr>
 							<h2 class="tenant"><%=tenant.name%>
-							 	<span class="suite"><%=tenant.suite%></span>
+							 	<span class="suite"><%=tenant.suite%>
+							 	</span>
 							</h2>
 							<h3 class="subname"><%=tenant.subname1%></h3>
 							<h3 class="subname"><%=tenant.subname2%></h3>
@@ -51,7 +53,8 @@
 				<%if(c == 2){%>
 					<%if(n.charAt(0) == i){%>
 							<h2 class="tenant"><%=tenant.name%>
-								<span class="suite"><%=tenant.suite%></span>
+								<span class="suite"><%=tenant.suite%>
+								</span>
 							</h2>
 							<h3 class="subname"><%=tenant.subname1%></h3>
 							<h3 class="subname"><%=tenant.subname2%></h3>
@@ -68,7 +71,8 @@
 							<h1 class="letter"><%=i%></h1>
 							<hr>
 							<h2 class="tenant"><%=tenant.name%>
-								<span class="suite"><%=tenant.suite%></span>
+								<span class="suite"><%=tenant.suite%>
+								</span>
 							</h2>
 							<h3 class="subname"><%=tenant.subname1%></h3>
 							<h3 class="subname"><%=tenant.subname2%></h3>
@@ -91,7 +95,8 @@
 				<%if(c == 3){%>
 					<%if(n.charAt(0) == i){%>
 							<h2 class="tenant"><%=tenant.name%>
-								<span class="suite"><%=tenant.suite%></span>
+								<span class="suite"><%=tenant.suite%>
+								</span>
 							</h2>
 							<h3 class="subname"><%=tenant.subname1%></h3>
 							<h3 class="subname"><%=tenant.subname2%></h3>
@@ -108,7 +113,8 @@
 							<h1 class="letter"><%=i%></h1>
 							<hr>
 							<h2 class="tenant"><%=tenant.name%>
-								<span class="suite"><%=tenant.suite%></span>
+								<span class="suite"><%=tenant.suite%>
+								</span>
 							</h2>
 							<h3 class="subname"><%=tenant.subname1%></h3>
 							<h3 class="subname"><%=tenant.subname2%></h3>
@@ -120,13 +126,10 @@
 							<h3 class="subname"><%=tenant.subname8%></h3>
 							<h3 class="subname"><%=tenant.subname9%></h3>
 							<h3 class="subname"><%=tenant.subname10%></h3>
-
 							<%}%>
 					<%}%>
 			<%});%>
 		</div>
-		
-
 		<div class="col-lg-3 dirMenu">
 			<div class="row" style="max-height:300px;">
 				<img src="/Assets/VOPNoWords.png" class="logo">
@@ -134,13 +137,11 @@
 			<br>
 			<div class="row menuRow">
 				<h1 class="menuTitle">Valley Office Park</h1>
-				<h1 class="menuTitle">Directory</h1>
+				
 			</div>
-			<!-- Replace this with applet built to display just a logo of the weather and the temperature -->
 			<div class="row menuRow">
 				<% var wid = weather.weather[0].id%>
 				<% var temp = weather.main.temp - weather.main.temp%1%>
-				<%console.log(temp);%>
 				<% if(wid == 800){ %>
 				<i class="wi wi-day-sunny"><p class="temp"><%=temp%>°</p></i>
 				<%} else if(wid >= 801 && wid <= 804){%>
@@ -156,21 +157,11 @@
 				<%} else if(wid >= 701 && wid <= 781){%>
 				<i class="wi wi-dust"><p class="temp"><%=temp%>°</p></i>
 				<%}%>
-
-
-				<!-- API call for weather and temperature -->
 			</div>
-			<!-- <div class="row menuRow">
-				<div id="feed"></div>
-			</div> -->
-			<!-- <div class="row">
-				<h1>News</h1>
-			</div> -->
 			<div class="row menuRow">
 				<iframe class="time" src="http://free.timeanddate.com/clock/i68r2mbn/n76/fs32/fcfff/tct/pct/ftb/tt0/tw1/tm1/th2/ts1/tb4" frameborder="0" width="283" height="72" allowTransparency="true"></iframe>
 			</div>
 		</div>
 	</div>
 </div>
-
 <%include ../partials/footer.ejs%>
